[package]
name = "trafficengine"
version = "0.2.8"
authors = ["Rainer Stademann <rainer.stademann@silverengine.de>"]

[lib]
name = "traffic_lib"
path = "src/lib.rs"

[[bin]]
name = "trafficengine"
path = "src/bin.rs"


[dependencies]
# we are using here e2de from branch e2d2-rs-v1 of https://github.com/rstade/NetBricks
e2d2 = { version = "=1.0.3", path = "../../work/NetBricks/framework", features = ["performance"] }
netfcts={ version="0.2.0", path = "../netfcts" }
fnv = "*"
log = ">=0.4"
env_logger = ">=0.5"
ctrlc = { version = ">=3.1", features = ["termination"] }
time = ">=0.1.0"
toml = "~0.4"
separator =  ">= 0.3"
serde = "1.0"
serde_derive = ">=1.0"
eui48 = { version= ">=0.4", features=["serde"] }
uuid = { version = ">=0.7", features = ["v4", "serde"] }
bincode = "*"
serde_json = "*"
ipnet = ">=1.0"


[features]
profiling =[]
